
2014-03-21
- util/string.c: Make strcmp() use unsigned chars in comparison
  (standard-C compliant). (RFB)
- util/string.c: Make memcmp()/strncmp()/strncasecmp() use unsigned
  chars in comparison (standard-C compliant). (RFB)
- aes/gemaplib.c aes/geminit.c aes/geminit.h aes/gemobed.c: Eliminate
  unnecessary global variable ad_valstr. (RFB)

2014-03-23
- aes/gemctrl.c aes/gemgsxif.c aes/gemgsxif.h aes/geminit.c
  aes/geminit.h aes/gemsuper.c: Code cleanup: arg to gsx_mfset() is
  now MFORM *. (RFB)
- aes/geminit.c aes/geminit.h aes/gemshlib.c aes/gemwmlib.c: Eliminate
  unnecessary global variable ad_stdesk. (RFB)
- aes/geminit.c aes/geminit.h aes/gemlib.h: Eliminate unused variables
  ad_sysglo and D.g_sysglo. (RFB)
- aes/geminit.c aes/gemobed.c aes/gemoblib.c aes/gemoblib.h: Eliminate
  unnecessary global variables ad_fmtstr, ad_rawstr, ad_tmpstr. (RFB)
- aes/geminit.c aes/gemshlib.c aes/gemshlib.h: Move shell buffer and
  eliminate unnecessary global ad_ssave. (RFB)
- aes/geminit.c aes/gemsclib.c aes/gemsclib.h: Move scrap directory
  string to THEGLO. (RFB)
- aes/geminit.c aes/gemlib.h: Move DTA to THEGLO. (RFB)
- aes/geminit.c aes/gemlib.h: Move desktop directory to THEGLO. (RFB)
- aes/geminit.c aes/gemlib.h: Move program name to THEGLO. (RFB)
- aes/geminit.c aes/gemlib.h: Move sh_find() work area to THEGLO. (RFB)
- aes/gemlib.h cli/cmd.h desk/deskdir.c desk/deskfun.c desk/deskinf.c
  desk/deskpro.c include/config.h: Add new #define for MAXPATHLEN. (RFB)
- aes/geminit.c aes/geminit.h: Code cleanup: remove no-longer-used
  variables and externs. (RFB)

2014-03-30
- aes/geminit.c aes/gemstart.S: Use bzero() to clear global area. (RFB)

2014-04-02
- aes/geminit.c aes/gemlib.h aes/gempd.c aes/struct.h: Reorganise AES
  process-related structures. (RFB)

2014-04-03
- aes/geminit.c aes/gemlib.h aes/gemshlib.c: Rename g_dir[] to g_work[]
  and increase length (fixes regression from 2014-03-23). (RFB)